Fix PP and other issues

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -113,7 +113,7 @@
 }
 
 .about__text-break {
-  display: none;
+  display: inline;
 
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     display: block;
