--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -5,7 +5,6 @@
   color: @special-grey;
   background-color: @white;
   border-radius: 10px;
-  overflow: hidden;
   filter: drop-shadow(0 0 0 fade(@black, 16%));
   transition: filter 0.4s ease;
   will-change: filter;
@@ -25,6 +24,8 @@
 
 .companion-card__avatar-container {
   order: 2;
+  position: relative;
+  z-index: @z-index-tranform-fix;
   border-radius: 10px 10px 0 0;
   overflow: hidden;
 
@@ -54,6 +55,8 @@
 
 .companion-card__info {
   order: 3;
+  position: relative;
+  z-index: @z-index-transform-fix-ontop;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -156,6 +159,7 @@
 .companion-card__badge {
   order: 1;
   position: relative;
+  z-index: @z-index-transform-fix-ontop;
   top: 77px;
   left: 17px;
   margin-top: -60px;
