--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -43,7 +43,9 @@
 }
 
 .review__author-break {
+  display: block;
+
   @media (min-width: @tablet-width) {
-    display: none;
+    display: inline;
   }
 }
