--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -97,7 +97,7 @@
 }
 
 .companions__text-break {
-  display: none;
+  display: inline;
 
   @media (min-width: @tablet-width) {
     display: block;
