--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -29,6 +29,10 @@
   padding: 0 25px;
   text-align: center;
 
+  &:first-of-type {
+    margin-bottom: 0;
+  }
+
   @media (min-width: @tablet-width) {
     margin-bottom: 63px;
   }
@@ -38,7 +42,7 @@
     line-height: 31px;
   }
 
-  &:nth-of-type(2) {
+  &:nth-of-type(3) {
     margin-bottom: 18px;
 
     @media (min-width: @tablet-width) {
@@ -54,8 +58,10 @@
 }
 
 .feedback__text-break {
+  display: block;
+
   @media (min-width: @tablet-width) {
-    display: none;
+    display: inline;
   }
 }
 
