--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -59,6 +59,7 @@
     align-items: center;
     filter: drop-shadow(0 0 0 fade(@special-shadow-light, 16%));
     transition: filter 0.4s ease;
+    will-change: filter;
 
     &:hover {
       filter: drop-shadow(0 2px 6px @special-shadow-light);
