--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -49,6 +49,10 @@
     order: 2;
     padding: 0;
 
+    &:focus-within {
+      border-color: @basic-blue;
+    }
+
     @media (min-width: @tablet-width) {
       order: 3;
     }
