--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -28,6 +28,10 @@
     padding-top: 3px;
   }
 
+  &:focus-within {
+    background-color: @basic-yellow;
+  }
+
   &--current {
     background-color: @basic-yellow;
     cursor: default;
