--- a/source/less/blocks/filter-catalog.less
+++ b/source/less/blocks/filter-catalog.less
@@ -279,6 +279,7 @@
     height: 18px;
     background-color: @white;
     border-radius: 4px;
+    cursor: pointer;
   }
 
   &::after {
@@ -291,6 +292,7 @@
     height: 12px;
     background-image: url("../../img/icons/icon_check-mark.svg");
     background-repeat: no-repeat;
+    cursor: pointer;
   }
 
   @media (min-width: @tablet-width) {
