--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -519,6 +519,15 @@
   text-align: center;
   color: @basic-blue-light;
 
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     position: relative;
     top: 2px;
