--- a/source/less/blocks/select-country.less
+++ b/source/less/blocks/select-country.less
@@ -655,6 +655,10 @@
     background-color: @special-blue-light;
   }
 
+  &:active {
+    color: @basic-blue-light;
+  }
+
   &::before,
   &::after {
     background-color: @ui-plus;
