--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -103,6 +103,7 @@
 @z-index-companion-card-hover: 2;
 @z-index-address-container: 2;
 @z-index-address-map-container: 1;
+@z-index-map: 1;
 // Form page
 @z-index-user-profile: 5;
 @z-index-checkbox: -1;
